--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ section .title::after{
 /* home section styling */
 .home{
     display: flex;
-    background: url(/img/back.png) no-repeat center;
+    background: url(back.png) no-repeat center;
     height: 100vh;
     color: #fff;
     min-height: 500px;
